--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Under Construction</title>
+<title>Hot Shot Adz - revolutionizing the ODA in India</title>
 <style>
   body {
     text-align: center;
